# motivation_test

./: gpu_index_probe  gpu_index_probe.cc
data_generate/: CMakeLists.txt
data_generate/include/: experiment_generator.h  ground_truth_calculator.h  random_data_generator.h
data_generate/src/: calculate_ground_truth.cpp  experiment_generator.cpp  ground_truth_calculator.cpp  random_data_generator.cpp  read_bin.cpp  read_fbin.cpp  read_fbin2.cpp  read_fbin3.cpp
data_generate/test/: 1024dim100K.cpp  1024dim100M.cpp  1024dim10M.cpp  1024dim1M.cpp  1024dim50M.cpp  1024dim5M.cpp  CMakeLists.txt  basic_test.cpp  correct_test.cpp  correct_test2.cpp  correct_test3.cpp
diskann_test/: .gitignore  CMakeLists.txt
diskann_test/config/: 1024dim100K.ini  1024dim100K_test.ini  1024dim100M.ini  1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
diskann_test/config/index_conf/: 0.8-1024dim100K.ini  0.8-1024dim10M.ini  0.8-1024dim1M.ini  0.8-1024dim50M.ini  0.8-1024dim5M.ini  0.9-1024dim100K.ini  0.9-1024dim10M.ini  0.9-1024dim1M.ini  0.95-1024dim100K.ini  0.95-1024dim10M.ini  0.95-1024dim1M.ini  0.95-1024dim50M.ini  0.95-1024dim5M.ini  0.98-1024dim100M.ini  0.98-1024dim10M.ini  0.98-1024dim1M.ini  1024dim100K.ini  usual.ini
diskann_test/include/: diskann_index.h
diskann_test/include/vector_test/: config.h  util.h
diskann_test/src/: diskann_index.cpp  main.cpp
diskann_test/test/: CMakeLists.txt  correct_test.cpp
diskann_test/test/include/: ground_truth_calculator.h  progress_bar.hpp  random_data_generator.h
dvstor_test/: .gitignore  CMakeLists.txt
dvstor_test/config/: 1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
dvstor_test/config/service/: 1024dim50M.ini  break_down.ini  usual.ini
dvstor_test/include/: dvstor_index.h
dvstor_test/include/vector_test/: logger.h
dvstor_test/reports/analyze/: 1-thread.md  16-thread.md  32-thread.md  64-thread.md  report.md
dvstor_test/reports/breakdown/: 1-thread.txt  16-thread.json  2-thread.txt  32-thread.json  64-thread.json  8-thread.json  8-thread.txt  direct_rdma.json  direct_rdma.txt
dvstor_test/reports/picture/: breakdown.py  latency.py
dvstor_test/scripts/: 1M-start_memory_node.sh  50M-2-start_memory_node.sh  50M-3-start_memory_node.sh  50M-start_memory_node.sh
dvstor_test/src/: dvstor_index.cpp  main.cpp  shine_gpu_index.cpp
dvstor_test/src/1024dim-10M/: build.sh  build_offline_index.sh  dynamic_test.sh  recall_test.sh  storage_test.sh
dvstor_test/src/1024dim-1M/: build.sh  build_offline_index.sh  dynamic_test.sh  recall_test.sh  storage_test.sh
dvstor_test/src/1024dim-50M/: build.sh  build_offline_index.sh  dynamic_test.sh  recall_test.sh  run_breakdown_test.sh  storage_test.sh
dvstor_test/src/1024dim-5M/: build.sh  build_offline_index.sh  dynamic_test.sh  recall_test.sh  storage_test.sh
fresh_diskann_test/: CMakeLists.txt
fresh_diskann_test/config/: 1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
fresh_diskann_test/config/index_conf/: 0.95-1024dim10M.ini  0.95-1024dim1M.ini  0.95-1024dim50M.ini  0.95-1024dim5M.ini  usual.ini
fresh_diskann_test/include/: fresh_diskann_index.h
fresh_diskann_test/src/: fresh_diskann_index.cpp  main.cpp
fresh_diskann_test/test/: CMakeLists.txt  correct_test.cpp
hnsw_test/: CMakeLists.txt
hnsw_test/config/: 1024dim100K.ini  1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
hnsw_test/config/index_conf/: 0.8-1024dim100K.ini  0.8-1024dim10M.ini  0.8-1024dim1M.ini  0.8-1024dim50M.ini  0.8-1024dim5M.ini  0.95-1024dim10M.ini  0.95-1024dim1M.ini  0.95-1024dim50M.ini  0.95-1024dim5M.ini  usual.ini
hnsw_test/include/: hnsw_index.h  progress_bar.hpp
hnsw_test/src/: hnsw_index.cpp  main.cpp
hnsw_test/test/: CMakeLists.txt  correct_test.cpp
jasper_test/: CMakeLists.txt
jasper_test/config/: 1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
jasper_test/config/index_conf/: 0.95-1024dim5M.ini
jasper_test/include/: jasper_index.h
jasper_test/src/: jasper_index.cu  main.cpp
odinann_test/: CMakeLists.txt
odinann_test/config/: 1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
odinann_test/config/index_conf/: usual.ini  (+4 more)
odinann_test/include/: odinann_index.h
odinann_test/src/: main.cpp  odinann_index.cpp
odinann_test/test/: CMakeLists.txt  correct_test.cpp
shine_gpu_test/: .compute_node.args  .gitignore  .memory_node.args  CMakeLists.txt
shine_gpu_test/config/: 1024dim100K.ini  1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
shine_gpu_test/include/: shine_gpu_index.h
shine_gpu_test/scripts/: 50M-1-start_memory_node.sh  50M-4-start_memory_node.sh  50M-5-start_memory_node.sh  50M-stop_memory_node.sh  5M-start_memory_node.sh  build_offline_index.sh  run_with_option.sh  start_compute_node.sh  start_memory_node.sh  test_http.py
shine_gpu_test/src/: shine_gpu_index.cpp  shine_index.py  test_vector_test.py
shine_test/: .gitignore  CMakeLists.txt  compute.sh  memory.sh
shine_test/config/: 1024dim100K.ini  1024dim10M.ini  1024dim1M.ini  1024dim50M.ini  1024dim5M.ini
shine_test/include/: shine_index.h
shine_test/scripts/: 10M-start_memory_node.sh  50M-1-start_memory_node.sh  50M-2-start_memory_node.sh  50M-3-start_memory_node.sh  50M-4-start_memory_node.sh  50M-5-start_memory_node.sh  50M-start_memory_node.sh  50M-stop_memory_node.sh  5M-start_memory_node.sh  start_cluster.sh  start_compute_node.sh  start_memory_node.sh  test_http.py
shine_test/src/: __init__.py  main.cpp  shine_index.cpp  shine_index.py  test_vector_test.py
spfresh_test/: CMakeLists.txt
spfresh_test/config/: 1024dim100K.ini
spfresh_test/include/: spfresh_index.h
spfresh_test/scripts/: vec_gen.py
spfresh_test/src/: main.cpp  spfresh_index.cpp
spfresh_test/test/: .gitignore  CMakeLists.txt  spfresh_test.cpp
vector_test/: CMakeLists.txt
vector_test/include/: util.h
vector_test/src/: config.cpp  logger.cpp  util.cpp  vector_test.cpp
vector_test_python/: example.py  pyproject.toml
vector_test_python/vector_test/: __init__.py  config.py  util.py  vector_index.py  vector_test.py
(+197 files in other folders)
